# ILCPP

./: CMakeLists.txt  README.md  makefile
src/: dynarray.h  main.c  static_assert.h
